--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>WebSocket Client</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebSocket with Vue</title>
+    <!-- Add Vue.js CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body>
-    <h1>WebSocket Client</h1>
-    <div id="messages"></div>
-    <input type="text" id="messageInput" placeholder="Type a message...">
-    <button id="sendButton">Send</button>
-    <script src="script.js"></script>
+    <div id="app">
+        <div id="messages">
+            <div v-for="(msg, index) in messages" :key="index">{{ msg }}</div>
+        </div>
+        <input type="text" v-model="message" id="messageInput" />
+        <button @click="sendMessage" id="sendButton">Send</button>
+    </div>
+
+    <script>
+        new Vue({
+            el: '#app',
+            data: {
+                messages: [],
+                message: '',
+                ws: null
+            },
+            mounted() {
+                this.ws = new WebSocket('ws://localhost:8080');
+                this.ws.onopen = () => {
+                    console.log('Connected to WebSocket server');
+                };
+                this.ws.onmessage = (event) => {
+                    this.messages.push(event.data);
+                };
+            },
+            methods: {
+                sendMessage() {
+                    if (this.ws && this.message) {
+                        this.ws.send(this.message);
+                        this.message = '';
+                    }
+                }
+            }
+        });
+    </script>
 </body>
 </html> 
